# uwp-xray-depot

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: 00-architecture.md  02-xbox-native-lib.md  03-logging.md  04-lua-repl.md  05-xray-depot.md  06-threat-model.md  07-roadmap.md  08-flavors.md  ARCHITECTURE.md  CPP-API.md  DEPOT-STRUCTURE.md  LANGUAGE-BINDINGS.md  LOGGING.md  LUA-REPL.md  NETWORK-PROTOCOL.md  QUICKSTART.md  ROADMAP.md  SECURITY.md  xb-xray-social-preview.psd
lic/: LUA-LICENSE.txt  SPDLOG-LICENSE.txt
samples/cpp-sample/: CMakeLists.txt  main.cpp
scripts/: build-all.ps1  build-lua.ps1  build-xray-sock.ps1
src/: CMakeLists.txt
src/xb-inspector/: inspector.cpp  lua_state.hpp  uwp_sink.h
src/xb-xray/: inspector.cpp  lua_state.hpp  uwp_net_sink.h  uwp_sink.h
src/xray-sock/: tcp_listener.cpp  tcp_listener.h
x64/include/xray/: inspector.hpp  safe_queue.h  struct_field.hpp  xray-sock.hpp
x64/lib/: lua5.4.lib
